# Tarea-Corta-D2

./: CMakeLists.txt  PagedArray.cpp  PagedArray.h  README  paged-sorted.cpp
.github/workflows/: cmake.yml
Archivos/: archivo  archivo.txt
Sorts/: Insertion Sort.cpp  Insertion Sort.h  Quick Sort.cpp  Quick Sort.h  Selection Sort.cpp  Selection Sort.h
